kubernetes/apollo-11/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apollo-11
  namespace: legacy-modernization
  labels:
    app: apollo-11
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: apollo-11
