kubernetes/apollo-11/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo-11
  namespace: legacy-modernization
  labels:
    app: apollo-11
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - apollo-11.legacy.gov
      secretName: apollo-11-tls
  rules:
    - host: apollo-11.legacy.gov
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apollo-11
                port:
                  name: http
